<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Copyright (c) Open Connectivity Foundation (OCF), AllJoyn Open Source
     Project (AJOSP) Contributors and others.
     
     SPDX-License-Identifier: Apache-2.0
     
     All rights reserved. This program and the accompanying materials are
     made available under the terms of the Apache License, Version 2.0
     which accompanies this distribution, and is available at
     http://www.apache.org/licenses/LICENSE-2.0
     
     Copyright (c) Open Connectivity Foundation and Contributors to AllSeen
     Alliance. All rights reserved.
     
     Permission to use, copy, modify, and/or distribute this software for
     any purpose with or without fee is hereby granted, provided that the
     above copyright notice and this permission notice appear in all
     copies.
     
     THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL
     WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED
     WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE
     AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL
     DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR
     PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
     TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
     PERFORMANCE OF THIS SOFTWARE.
-->
<resources>

    <!-- General -->
    <string name="hello">Hello World, OnboardingActivity!</string>
    <string name="app_name">Onboarding Client</string>
    <string name="current_network">Current network: %s</string>
    <string name="version">Version:&#160;</string>
	<string name="menu_refresh">Refresh</string>
    
    <!-- Scan Wifi Activity -->
	<string name="Scan_WIFI_networks">Scan WIFI networks</string>
	<string name="scan_wifi_text">Choose device to connect to</string>
	<string name="enter_wifi_password_title">Enter password</string>
    <string name="enter_wifi_password_message">Enter password if needed. If your WIFI is free, leave this field empty</string>
    <string name="connecting_to">"Connecting to %s"</string>
    <string name="failed_to_connect_to_wifi_title">Failed to connect</string>
    <string name="failed_to_connect_to_wifi_message">"Failed to connect to %s. Please try to refresh your list, or enter another password and try again"</string>
	<string name="wifi_activity_scanning">Scanning&#8230;</string>
    
	<!-- Devices Activity -->
	<string name="AllJoynConnect">Connect to AllJoyn</string>
	<string name="AllJoynDisconnect">Disconnect from AllJoyn</string>
	<string name="device_list_item_click_toast">Press long for a menu</string>
	
	<!-- Onboarding -->
	<string name="last_error_code">Last error code:&#160;</string>
	<string name="last_error_msg">Last error message:&#160;</string>
	<string name="state">State:&#160;</string>
	<string name="scan_info_data">Scan info:&#160;</string>
	<string name="scan_info_age">Scan info age:&#160;</string>
	<string name="networkHint">Network name</string>
    <string name="passwordHint">Network password</string>
	<string name="auth_type">Auth type</string>
	<string name="configure">Configure</string>
	<string name="connect">Connect</string>
	<string name="menu_offboard">Offboard</string>
	<string name="password_type_ascii">ASCII</string>
	<string name="password_type_hex">HEX</string>
	
	<!-- Password -->
	<string name="enterDevicePassword">Enter device password</string>
	<string name="showPassword">Show password</string>
	
	<!-- Main context menu -->
	<string name="context_menu_announce">Show announce</string>
	<string name="context_menu_onboarding">Onboarding</string>
		
</resources>
